# Slice

./: .replit  __init__.py  compiler.py  main.py  module.slice  pyproject.toml  renderer.py  syntax.md  test.py  test.slice
constructors/: lexer.py  parser.py
constructors/objects/: Utils.py
