[tool.poetry]
name = "slice"
version = "0.1.0"
description = "A programming languge like assembly and BASIC."
authors = ["Lethdev2019 <lethdev2019@repl.email>", "aguy11", "MarcusWeinberger"]

[tool.poetry.dependencies]
python = "^3.8"
alive-progress = "^1.6.1"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
